test/Dialect/ZKIR/Inputs/header_7C.zkir
// Imported via `include_fail.zkir`

module attributes {veridise.lang = "zkir"} {
  // expected-error@+1 {{found cyclic include}}
  zkir.include "Inputs/header_7A.zkir" as @cycle

  zkir.func private @func_in_7c()
}
